environments/overlays/prod/networkpolicy-cicd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-cicd
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: rollout-demos-cicd
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: rollout-bluegreen
  policyTypes:
  - Ingress
